@@ -248,10 +248,16 @@ sub validateTypedRow
     return unless ($action eq 'add' or $action eq 'update');
 
     if (exists $parms->{'path'}) {
-        my $path = $parms->{'path'}->selectedType();
-        if ($path eq 'system') {
+        my $pathType = $parms->{'path'}->selectedType();
+        my $pathValue = $parms->{'path'}->value();
+        if ($pathType eq 'system') {
             # Check if it is an allowed system path
-            my $normalized = abs_path($parms->{'path'}->value());
+            my $normalized = abs_path($pathValue);
+            unless (defined $normalized) {
+                throw EBox::Exceptions::External(
+                    __x("Zentyal could not access to directory '{x}': {y}",
+                        x => $pathValue, y => $!));
+            }
             if ($normalized eq '/') {
                 throw EBox::Exceptions::External(
                     __('The file system root directory cannot be used as share'));
@@ -274,8 +280,7 @@ sub validateTypedRow
             $self->_checkSystemShareMountOptions($normalized);
         } else {
             # Check if it is a valid directory
-            my $dir = $parms->{'path'}->value();
-            EBox::Validate::checkFilePath($dir, __('Samba share directory'));
+            EBox::Validate::checkFilePath($pathValue, __('Samba share directory'));
         }
     }
 }
